# mkdocs-quizdown-plugin

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ghpages.yml  pypi.yml  tagging.yml
assets/: quizdown.js  quizdown_init.js
docs/: index.md  page-without-quiz.md  second-quiz.md
page-without-quiz/: index.html
second-quiz/: index.html
src/mkdocs_quizdown_plugin/: plugin.py
