# SPDX-FileCopyrightText: 2024 Thomas Breitner
#
# SPDX-License-Identifier: MIT

[project]
name = "mkdocs-quizdown-plugin"
dynamic = ["version"]
description = "MkDocs plugin for quizdown-js"
authors = [{name = "Thomas Breitner", email = "mail@thms.de"},]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Framework :: MkDocs",
    "Topic :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "mkdocs>=1.6",
]

[project.optional-dependencies]
pypi = [
    "build",
    "twine",
]

[project.entry-points."mkdocs.plugins"]
quizdown = "mkdocs_quizdown_plugin.plugin:QuizdownPlugin"

[project.urls]
Repository = "https://github.com/tombreit/mkdocs-quizdown-plugin"
Homepage = "https://github.com/tombreit/mkdocs-quizdown-plugin"
Documentation = "https://github.com/tombreit/mkdocs-quizdown-plugin/blob/main/README.md"
Issues = "https://github.com/tombreit/mkdocs-quizdown-plugin/issues"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
